k8s/ingress.local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smithe-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smithe-frontend
            port:
              number: 80
